# tekion-api-testing

./: .env.example  .gitignore  README.md  pyproject.toml  search_response_envelope.json  tekion-api.postman_collection.json
.claude/plans/: 2025-07-22-tekion-api-client-implementation.md
.claude/specs/: 2025-07-22-tekion-api-client-design.md
scripts/: demo_appointment.py  demo_customer.py  demo_repair_order.py  demo_support.py  demo_vehicle.py
tekion_api/: auth.py  client.py  config.py  exceptions.py
tekion_api/models/: common.py  customer.py
tekion_api/services/: appointment.py  base.py  customer.py  repair_order.py  support.py  vehicle.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_exceptions.py  test_models.py
tests/services/: test_appointment.py  test_customer.py  test_repair_order.py  test_support.py  test_vehicle.py
