[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tekion_api*"]

[project]
name = "tekion-api"
version = "0.1.0"
description = "Python client for Tekion Automotive Partner Cloud (APC) API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23",
    "respx>=0.21,<1",
    "pytest-env>=1.0",
]
